--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@openzeppelin/contracts": "^4.6.0",
     "@openzeppelin/contracts-upgradeable": "^4.6.0",
     "@openzeppelin/test-helpers": "^0.5.15",
-    "@openzeppelin/truffle-upgrades": "^1.15.0"
+    "@openzeppelin/truffle-upgrades": "^1.15.0",
+    "truffle": "^5.5.18"
   }
 }
