--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^8.18.0",
     "eslint-plugin-truffle": "^0.3.1",
     "ethlint": "^1.2.5",
-    "truffle": "^5.5.18"
+    "truffle": "^5.5.18",
+    "truffle-plugin-verify": "^0.5.26"
   }
 }
