Enable coverage report for contracts
1. Change test framework to hardhat
2. Enable coverage report for contracts

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,12 +4,11 @@ stages:
   - build
 
 default:
-  image: node:14.19.3-alpine
+  image: node:14.19.3
   tags:
     - docker
   before_script:
-    - apk add python3
-    - apk add git
+    - apt-get install -y git python3
     - npm install
 
 linter:
@@ -21,7 +20,6 @@ linter:
 test:
   stage: test
   script:
-    - npx ganache-cli -p 9545 > /dev/null &
     - npm test
 
 build:
